Review Request 9892 - PLS-4060 fixed Account Not Found warning not showing up under Company Lookup - Fixed Company Lookup Attributes/Logs tabs visual rendering glitch

--- a/le-ui/projects/common/components/datacloud/lookup/lookup.component.scss
+++ b/le-ui/projects/common/components/datacloud/lookup/lookup.component.scss
@@ -31,18 +31,20 @@
         font-weight: bold;
         
         li {
+            display: inline-block;
+            background: #f1f1f1;
             padding: 0.6em 1.5em;
             margin-right: 0.5em;
             margin-bottom: -1px;
             border: 1px solid #d0d0d0;
-            display: inline-block;
-            background: #f1f1f1;
+            border-bottom: none;
             cursor: pointer;
 
             &.active {
-                background: inherit;
+                background: #fafafa;
                 border-bottom-color: #fafafa;
                 cursor: default;
+                color: #ef6a30;
             }
 
             &:hover {
